# computer-graphics

./: .gitignore.txt  .gitmodules  CMakeLists.txt  README.md  config.bat
Lectures/: CMakeLists.txt
Lectures/Perspective_and_Rasterization/: CMakeLists.txt
Lectures/Perspective_and_Rasterization/src/: main.cpp  tgaimage.h
Lectures/Teste/: CMakeLists.txt
Lectures/Teste/src/: main.cpp
LinearAlgebra/: CMakeLists.txt  README.md
LinearAlgebra/src/: vectors.cpp
SnakeGame/: CMakeLists.txt
SnakeGame/common/shaders/: fragmentShader.fs  vertexShader.vs
SnakeGame/src/: application.cpp  application.h  camera.cpp  camera.h  core.cpp  core.h  entity.cpp  entity.h  main.cpp  shader.cpp  shader.h  snake_game.h
Teste/: CMakeLists.txt  main.cpp
Teste/src/: console.cpp  console.hpp  main.cpp
TinyRenderer/: CMakelists.txt  main.cpp  tgaimage.h
introduction-SDL/: CMakeLists.txt
introduction-SDL/src/: main.cpp
projects/Teste/: CMakeLists.txt
projects/Teste/src/: main.cpp
